# tauri-bank

./: .eslintrc.json  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  app-routes.tsx  index.css  main.tsx
src-tauri/: .env  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/migrations/2024-06-22-194326_nome_da_migration/: down.sql  up.sql
src-tauri/src/: client.rs  lib.rs  main.rs  schema.rs
src/components/ui/: dialog.tsx  form.tsx  input.tsx
src/models/: account.ts  client.ts  transaction.ts
src/pages/home/: home-page.tsx
src/pages/home/components/: menu-item.tsx  register_client_dialog.tsx  register_client_form.tsx
